...
                enter = slideInVertically { -it } + expandVertically() + fadeIn(),
                exit = slideOutVertically { -it } + shrinkVertically() + fadeOut()
            ) {
                MemoFeedTabs(
                    pagerState,
                    Modifier
                        .testTag("memo_feed_tabs")
                        .onSizeChanged {
                            feedHeaderHeight = with(density) { it.height.toDp() }
                        }
                        .padding(bottom = 16.dp)
                )
            }
...
